# scripted-ai

./: .gitignore  README.md  post.html  post.json  post.md  pyproject.toml  training_data.pkl
db/ac17a7f9-54a8-458f-9d86-4ad9dff31c56/: index_metadata.pickle
src/scripted_ai/: crew.py  main.py
src/scripted_ai/config/: agents.yaml  tasks.yaml
src/scripted_ai/knowledge/: crew_ai_knowledge_source.py
src/scripted_ai/models/: content_output.py  post_data.py  social_media_post.py
src/scripted_ai/tools/: gcp_image_uploader.py  image_downloader.py  wordpress_tool.py
src/scripted_ai/utils/: utils.py
