[project]
name = "scripted_ai"
version = "0.1.0"
description = "scripted-ai using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
scripted_ai = "scripted_ai.main:run"
run_crew = "scripted_ai.main:run"
train = "scripted_ai.main:train"
replay = "scripted_ai.main:replay"
test = "scripted_ai.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
